--- a/TestProjectSep10/Base.lproj/Main.storyboard
+++ b/TestProjectSep10/Base.lproj/Main.storyboard
@@ -41,6 +41,9 @@
                                         <rect key="frame" x="20" y="20" width="303" height="40"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="1Fl-N4-Pcu"/>
+                                        </connections>
                                     </textField>
                                     <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HDL-MT-ecu">
                                         <rect key="frame" x="343" y="25" width="30" height="30"/>
@@ -50,6 +53,9 @@
                                         </constraints>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Button" image="send-message"/>
+                                        <connections>
+                                            <action selector="sendButtonTapAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tEm-xQ-dFS"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XBK-Oj-ydy">
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="1"/>
@@ -82,7 +88,7 @@
                             </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="WLr-Ss-1bi">
                                 <rect key="frame" x="10" y="125" width="373" height="613"/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fea-aG-g88">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -99,6 +105,10 @@
                                         </collectionViewCellContentView>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="mB4-El-cJA"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="eyG-lo-Yd9"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -123,6 +133,8 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="chatCollectionView" destination="WLr-Ss-1bi" id="UOC-Th-7n8"/>
+                        <outlet property="messageWriteTextView" destination="3cY-sb-7YH" id="4Sm-7u-sc6"/>
                         <outlet property="messageWriteView" destination="QR5-yo-i9a" id="Hn9-1H-XZ5"/>
                         <outlet property="messageWriteViewBottomConstraint" destination="dmp-no-J4e" id="xYc-cd-SVX"/>
                         <outlet property="messageWriteViewHeightConstraint" destination="XUT-JC-YLP" id="NMa-Fx-tdi"/>
